# spectrex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: doc_ghpages.yml  documentation.yaml
docs/: Makefile  conf.py  index.rst  main.bib
docs/_ext/: astro_cite.py
docs/api/: modules.rst  solvers.rst
docs/content/: analysis_rmse_vs_density.ipynb  comparison_computational.ipynb  conduct.md  contributing.md  mock_example.ipynb  whats_next.md
docs/superpowers/plans/: 2026-05-05-analysis-rmse-vs-density.md  2026-05-05-phase2-jax-operator-solver.md
docs/superpowers/specs/: 2026-05-05-comparison-notebooks-design.md  2026-05-05-fista-adaptive-restart-design.md  2026-05-05-spectrex-refactoring-design.md  2026-05-06-api-documentation-design.md  2026-05-06-phase3-directions.md
notebooks/: _build_comparison_accuracy.py  _build_comparison_computational.py  analysis_recovery_characterisation.ipynb  comparison_computational.ipynb  comparison_solver_accuracy.ipynb  instrument_primer.ipynb  mock_example.ipynb
src/spectrex/: __init__.py  _version.py  basis.py  instrument.py  jax_operator.py  jax_solver.py  operator.py  solver.py
unittests/: test_basis.py  test_instrument.py  test_jax_integration.py  test_jax_operator.py  test_jax_solver.py  test_operator.py  test_solver.py
