[project]
name = "specTrex"
authors = [
  {name = "Anika Seidel", email = "anseidel@mpia.de"},
  {name = "Ivelina Momcheva", email = "momcheva@mpia.de"},
  {name = "Morgan Fouesneau", email = "fouesneau@mpia.de"},
]
description = "Grism spectra extraction in crowded regions"
readme = "README.md"
license = { file = 'LICENSE' }
classifiers = [
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    'Topic :: Scientific/Engineering :: Astronomy'
]
requires-python = ">=3.12"
dependencies = [
    "jax",
    "numpy>=2,<3",
    "scipy>=1.17.1,<2",
    "matplotlib>=3.10.8,<4",
    "astropy>=7.2.0,<8",
    "asdf-astropy>=0.11.0,<0.12",
    "grismagic @ git+https://github.com/ivastar/grismagic",
]
dynamic = ['version']

[project.optional-dependencies]
ci = [
  "toml",
  "ruff",
  "ty",
  "isort",
  "prek"]

docs = [
  "sphinx>=5.3",
  "sphinx-book-theme>=0.3.3",
  "sphinx-automodapi>=0.14",
  "sphinx_copybutton>=0.5",
  "sphinx-mdinclude>=0.6",
  "sphinxcontrib-htmlhelp>=2.1.0",
  "sphinxcontrib-serializinghtml>=2.0.0",
  "sphinx-tabs>=3.0",
  "myst-nb>=0.16.0",
  "sphinx-design>=0.6",
  # for syntax highlighting (https://nbsphinx.readthedocs.io/en/0.8.0/installation.html#Pygments-Lexer-for-Syntax-Highlighting)
  "IPython>=8.0",
  "matplotlib",
  "numpydoc",
  "pybtex>=0.26.1",
  "sphinxcontrib-bibtex>=2.6.5",
]

testing = [
    "pytest",
    "pytest-doctestplus",
    "codecov",
    "pytest-cov"]

[project.urls]
"Bug Tracker" = "https://github.com/the-bagel-org/spectrex/issues"
"Source Code" = "https://github.com/the-bagel-org/spectrex"

[build-system]
requires = [
    "setuptools>=60",
    "setuptools_scm>=8.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools_scm]
version_file = "src/spectrex/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["unittests"]       # exclude packages matching these glob patterns (empty by default)
namespaces = true             # to disable scanning PEP 420 namespaces (true by default)

[tool.coverage.run]
omit = [
    "_version.py",
]

[tool.ruff]
# Enumerate all fixed violations.
show-fixes = true
# Always generate Python 3.10-compatible code.
target-version = "py310"
# PEP-8 line length
line-length = 79
# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    ".DS_Store",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
    ".pre-commit-config.yaml",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# use double quotes for strings.
quote-style = "double"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]
testpaths = ["unittests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.34",
    "jupyter>=1.1",
    "nbformat>=5.10",
]
docs = [
    "pybtex>=0.26.1",
]
